--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=8080
 server.servlet.context-path=/
 server.servlet.encoding.charset= UTF-8
 server.servlet.encoding.force=true
+#server.servlet.session.tracking-modes=cookie
+#server.servlet.session.timeout= 30m
 
 #Database Configuration
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
