--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,6 @@ spring.jpa.properties.hibernate.format_sql = true
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
+spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.location=""
+
