유저 이미지 저장 완성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,5 +29,5 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.servlet.multipart.max-file-size = 10MB
-spring.servlet.multipart.location=""
+#spring.servlet.multipart.location=""
 
