--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,10 @@ server.servlet.encoding.force=true
 #Database Configuration
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/projectweb?serverTimezone=Asia/Seoul
-# 배포시 수정
+# 운영 서버
+#spring.datasource.username=webproject
+#spring.datasource.password=1234
+# 로컬
 spring.datasource.username= root
 spring.datasource.password= root
 
