--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
 server.port=8080
+#server.address=localhost:8080
 server.servlet.context-path=/
 server.servlet.encoding.charset= UTF-8
 server.servlet.encoding.force=true
