--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.url= jdbc:mysql://localhost:3306/projectweb?serverTimezone=Asi
 # 운영 서버
 #spring.datasource.username=webproject
 #spring.datasource.password=1234
-# 로컬
+# 로컬 서버
 spring.datasource.username= root
 spring.datasource.password= root
 
@@ -26,7 +26,7 @@ spring.datasource.password= root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
 
