--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,16 @@
 			<artifactId>jbcrypt</artifactId>
 			<version>0.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.undertow/undertow-servlet -->
+		<!-- <dependency> <groupId>io.undertow</groupId> <artifactId>undertow-servlet</artifactId> 
+			</dependency> -->
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-tomcat -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<version>2.5.6</version>
+		</dependency>
 
 
 
