--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.encoding.charset= UTF-8
 server.servlet.encoding.force=true
 #server.servlet.session.tracking-modes=cookie
 #server.servlet.session.timeout= 30m
-
+server.error.include-message=never
 
 #Database Configuration
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
@@ -30,6 +30,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
+logging.level.org.hibernate.type.descriptor.sql=true
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
