--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
-logging.level.org.hibernate.type.descriptor.sql=true
+#logging.level.org.hibernate.type.descriptor.sql=true
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
