--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 			<artifactId>spring-boot-starter-cache</artifactId>
 
 		</dependency>
-		
+
 
 
 		<!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
@@ -48,6 +48,15 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<version>2.5.6</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+
 
 
 
