--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
-
 		</dependency>
 
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
+		<!-- <dependency> <groupId>org.ehcache</groupId> <artifactId>ehcache</artifactId> 
+			<version>3.5.1</version> </dependency> <dependency> <groupId>javax.cache</groupId> 
+			<artifactId>cache-api</artifactId> </dependency> -->
 
 
 		<!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
@@ -56,8 +64,6 @@
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
-
-
 
 
 		<dependency>
