--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,5 @@ spring.jackson.serialization.fail-on-empty-beans=false
 spring.servlet.multipart.max-file-size = 10MB
 #spring.servlet.multipart.location=""
 
+
+#spring.cache.jcache.config=classpath:ehcache.xml
