--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,14 @@
 			<artifactId>ehcache</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+
+		</dependency>
+
+
 		<!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
 		<!-- <dependency> <groupId>org.ehcache</groupId> <artifactId>ehcache</artifactId> 
 			<version>3.5.1</version> </dependency> <dependency> <groupId>javax.cache</groupId> 
