--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,7 @@ spring.servlet.multipart.max-file-size = 10MB
 
 
 #spring.cache.jcache.config=classpath:ehcache.xml
+
+spring.redis.lettuce.pool.max-active=10
+spring.redis.port=6379
+spring.redis.host=127.0.0.1
