--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,11 @@ server.error.include-message=never
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/projectweb?serverTimezone=Asia/Seoul
 # 운영 서버
-#spring.datasource.username=webproject
-#spring.datasource.password=1234
+spring.datasource.username=webproject
+spring.datasource.password=1234
 # 로컬 서버
-spring.datasource.username= root
-spring.datasource.password= root
+#spring.datasource.username= root
+#spring.datasource.password= root
 
 
 #mvc
