--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,11 @@ server.error.include-message=never
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/projectweb?serverTimezone=Asia/Seoul
 # 운영 서버
-spring.datasource.username=webproject
-spring.datasource.password=1234
+#spring.datasource.username=webproject
+#spring.datasource.password=1234
 # 로컬 서버
-#spring.datasource.username= root
-#spring.datasource.password= root
+spring.datasource.username= root
+spring.datasource.password= root
 
 
 #mvc
@@ -39,9 +39,9 @@ spring.servlet.multipart.max-file-size = 10MB
 
 
 #spring.cache.jcache.config=classpath:ehcache.xml
-spring.redis.lettuce.pool.max-active=10
-spring.redis.port=6379
-spring.redis.host=127.0.0.1
+#spring.redis.lettuce.pool.max-active=10
+#spring.redis.port=6379
+#spring.redis.host=127.0.0.1
 
 #Relying upon circular references is discouraged and they are prohibited by default.
 #Update your application to remove the dependency cycle between beans. As a last resort, it may be possible to break the cycle automatically by setting spring.main.allow-circular-references to true.
