--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,17 @@
 			<version>${querydsl.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.slack.api</groupId>
+			<artifactId>bolt</artifactId>
+			<version>1.27.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.slack.api</groupId>
+			<artifactId>bolt-servlet</artifactId>
+			<version>1.27.2</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
 		<!-- <dependency> <groupId>org.ehcache</groupId> <artifactId>ehcache</artifactId> 
 			<version>3.5.1</version> </dependency> <dependency> <groupId>javax.cache</groupId> 
