설정 임시 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,9 @@ spring.datasource.password=1234
 #spring.datasource.username= root
 #spring.datasource.password= root
 
+#slack 
+slack.token=xoxb-4478951670594-4472374202326-v8mKHyBPubUI7n4vDdsZiXzl
+slack.channel.monitor=#backend-error-message
 
 #mvc
 #spring.mvc.view.prefix= /WEB-INF/views/
@@ -27,7 +30,7 @@ spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
 #logging.level.org.hibernate.type.descriptor.sql=true
