--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,11 @@ server.servlet.encoding.force=true
 #server.servlet.session.timeout= 30m
 server.error.include-message=never
 
+server.ssl.enabled=true
+server.ssl.key-store=/etc/letsencrypt/archive/mybackendpractice.link/letsencrypt.jks
+server.ssl.key-store-password=1234
+server.ssl.key-password=1234
+
 #Database Configuration
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/projectweb?serverTimezone=Asia/Seoul
