--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.servlet.encoding.force=true
 server.error.include-message=never
 
 server.ssl.enabled=true
-server.ssl.key-store=/etc/letsencrypt/archive/mybackendpractice.link/letsencrypt.jks
+server.ssl.key-store=/home/secure/
 server.ssl.key-store-password=1234
 server.ssl.key-password=1234
 
