--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,15 @@
     "name": "slack.channel.monitor",
     "type": "java.lang.String",
     "description": "A description for 'slack.channel.monitor'"
+  },
+  {
+    "name": "image.user.originalFileName",
+    "type": "java.lang.String",
+    "description": "A description for 'image.user.originalFileName'"
+  },
+  {
+    "name": "image.user.filePath",
+    "type": "java.lang.String",
+    "description": "A description for 'image.user.filePath'"
   }
 ]}
