유저 이미지 설정 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,11 +18,11 @@ server.error.include-message=never
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/projectweb?serverTimezone=Asia/Seoul
 # 운영 서버
-#spring.datasource.username=webproject
-#spring.datasource.password=1234
+spring.datasource.username=webproject
+spring.datasource.password=1234
 # 로컬 서버
-spring.datasource.username= root
-spring.datasource.password= root
+#spring.datasource.username= root
+#spring.datasource.password= root
 
 #slack 
 slack.token=xoxb-4478951670594-4472374202326-v8mKHyBPubUI7n4vDdsZiXzl
@@ -31,6 +31,13 @@ slack.channel.monitor=#backend-error-message
 #img
 #image.user.originalFileName=blank-profile-picture-gdf6b93f73_640.png
 #image.user.filePath=E:\img\defaultImage
+
+#dev
+image.path=E:\img
+
+#product
+#image.path=/home/img
+
 #mvc
 #spring.mvc.view.prefix= /WEB-INF/views/
 #spring.mvc.view.suffix= .jsp
