--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#server.port=8080
-server.port=8443
+server.port=8080
+#server.port=8443
 #server.address=localhost:8080
 server.servlet.context-path=/
 server.servlet.encoding.charset= UTF-8
@@ -8,11 +8,11 @@ server.servlet.encoding.force=true
 #server.servlet.session.timeout= 30m
 server.error.include-message=never
 
-server.ssl.enabled=true
-server.ssl.key-store=/home/secure/keystore.p12
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store-password=1234
-server.ssl.key-password=1234
+#server.ssl.enabled=true
+#server.ssl.key-store=/home/secure/keystore.p12
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-password=1234
+#server.ssl.key-password=1234
 
 #Database Configuration
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
@@ -29,13 +29,13 @@ slack.token=xoxb-4478951670594-4472374202326-v8mKHyBPubUI7n4vDdsZiXzl
 slack.channel.monitor=#backend-error-message
 
 #img
-#image.user.originalFileName=blank-profile-picture-gdf6b93f73_640.png
-#image.user.filePath=E:\img\defaultImage
+image.user.originalFileName=blank-profile-picture-gdf6b93f73_640.png
+image.user.filePath=E:\img\defaultImage
 
 #dev
 #image.path=E:\img
 
-product
+#product
 #image.path=/home/img
 
 #mvc
