--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,13 +1,13 @@
 {"properties": [
   {
-    "name": "slack.token",
-    "type": "java.lang.String",
-    "description": "A description for 'slack.token'"
-  },
-  {
     "name": "slack.channel.monitor",
     "type": "java.lang.String",
     "description": "A description for 'slack.channel.monitor'"
+  },
+  {
+    "name": "slack.token.location",
+    "type": "java.lang.String",
+    "description": "A description for 'slack.token.location'"
   },
   {
     "name": "image.user.originalFileName",
@@ -15,8 +15,13 @@
     "description": "A description for 'image.user.originalFileName'"
   },
   {
-    "name": "image.user.filePath",
+    "name": "image.todo.path",
     "type": "java.lang.String",
-    "description": "A description for 'image.user.filePath'"
+    "description": "A description for 'image.todo.path'"
+  },
+  {
+    "name": "image.user.path",
+    "type": "java.lang.String",
+    "description": "A description for 'image.user.path'"
   }
 ]}
