--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,62 +1,61 @@
 #dev
-
-####server.port=8080
-#server.address=localhost:8080
-####server.servlet.context-path=/
-####server.servlet.encoding.charset= UTF-8
-####server.servlet.encoding.force=true
-#server.servlet.session.tracking-modes=cookie
-#server.servlet.session.timeout= 30m
-####server.error.include-message=never
-
-#Database Configuration
-####spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-####spring.datasource.url= jdbc:mysql://localhost:3306/projectweb?serverTimezone=Asia/Seoul
-#spring.datasource.url=jdbc:mysql://localhost:3306/projectweb„
-####spring.datasource.username=root
-####spring.datasource.password=root
-
-###slack
-
-#dev
-####slack.token.location=E:/token/slack
-####slack.channel.monitor=#backend-error-message
-
-###img
-####image.user.path=E:/img/user
-####image.todo.path=E:/img/todo
-
-####image.user.originalFileName=blank-profile-picture-gdf6b93f73_640.png
-####image.user.filePath=E:/img/defaultImage
-####image.path=E:/img
-
-###mvc
-#spring.mvc.view.prefix= /WEB-INF/views/
-#spring.mvc.view.suffix= .jsp
-  
-###Hibernate Configuration
-####spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-####spring.jpa.hibernate.use-new-id-generator-mappings=false
-####spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-####spring.jpa.hibernate.ddl-auto= update
-####spring.jpa.show-sql=true
-####spring.jpa.properties.hibernate.format_sql = true
-#logging.level.org.hibernate.type.descriptor.sql=true
-
-####spring.jackson.serialization.fail-on-empty-beans=false
-####spring.servlet.multipart.max-file-size = 10MB
-#spring.servlet.multipart.location=""
-
-
-#spring.cache.jcache.config=classpath:ehcache.xml
-#spring.redis.lettuce.pool.max-active=10
-#spring.redis.port=6379
-#spring.redis.host=127.0.0.1
-
-#Relying upon circular references is discouraged and they are prohibited by default.
-#Update your application to remove the dependency cycle between beans. As a last resort, it may be possible to break the cycle automatically by setting spring.main.allow-circular-references to true.
-####spring.main.allow-circular-references=false
-
+#
+#server.port=8080
+##server.address=localhost:8080
+#server.servlet.context-path=/
+#server.servlet.encoding.charset= UTF-8
+#server.servlet.encoding.force=true
+##server.servlet.session.tracking-modes=cookie
+##server.servlet.session.timeout= 30m
+#####server.error.include-message=never
+#
+##Database Configuration
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url= jdbc:mysql://localhost:3306/projectweb?serverTimezone=Asia/Seoul
+#spring.datasource.username=root
+#spring.datasource.password=root
+#
+####slack
+#
+##dev
+#slack.token.location=E:/token/slack
+#slack.channel.monitor=#backend-error-message
+#
+####img
+#image.user.path=E:/img/user
+#image.todo.path=E:/img/todo
+#
+#####image.user.originalFileName=blank-profile-picture-gdf6b93f73_640.png
+#####image.user.filePath=E:/img/defaultImage
+#####image.path=E:/img
+#
+####mvc
+##spring.mvc.view.prefix= /WEB-INF/views/
+##spring.mvc.view.suffix= .jsp
+#  
+####Hibernate Configuration
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.use-new-id-generator-mappings=false
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql = true
+##logging.level.org.hibernate.type.descriptor.sql=true
+#
+#####spring.jackson.serialization.fail-on-empty-beans=false
+#####spring.servlet.multipart.max-file-size = 10MB
+##spring.servlet.multipart.location=""
+#
+#
+##spring.cache.jcache.config=classpath:ehcache.xml
+##spring.redis.lettuce.pool.max-active=10
+##spring.redis.port=6379
+##spring.redis.host=127.0.0.1
+#
+##Relying upon circular references is discouraged and they are prohibited by default.
+##Update your application to remove the dependency cycle between beans. As a last resort, it may be possible to break the cycle automatically by setting spring.main.allow-circular-references to true.
+#####spring.main.allow-circular-references=false
+#
 
 #product
 
