--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,7 +77,7 @@ server.error.include-message=never
 
 #Database Configuration
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/projectweb?serverTimezone=Asia/Seoul„
+spring.datasource.url= jdbc:mysql://localhost:3306/projectweb?serverTimezone=UTC„
 spring.datasource.username=webproject
 spring.datasource.password=1234
 
