timezone error 해결 시도

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@
 #
 ##Database Configuration
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url= jdbc:mysql://localhost:3306/projectweb?serverTimezone=Asia/Seoul
+#spring.datasource.url=jdbc:mysql://localhost:3306/projectweb?serverTimezone=Asia/Seoul
 #spring.datasource.username=root
 #spring.datasource.password=root
 #
@@ -76,9 +76,10 @@ server.error.include-message=never
 #server.ssl.key-password=1234
 
 #Database Configuration
-spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/projectweb?serverTimezone=UTC„
-spring.datasource.username=webproject
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/projectweb?serverTimezone=Asia/Seoul
+„#
+spring.datasource.username==webproject
 spring.datasource.password=1234
 
 
