--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -10,18 +10,13 @@
     "description": "A description for 'slack.token.location'"
   },
   {
-    "name": "image.user.originalFileName",
+    "name": "image.path.user",
     "type": "java.lang.String",
-    "description": "A description for 'image.user.originalFileName'"
+    "description": "A description for 'image.path.user'"
   },
   {
-    "name": "image.todo.path",
+    "name": "image.path.todo",
     "type": "java.lang.String",
-    "description": "A description for 'image.todo.path'"
-  },
-  {
-    "name": "image.user.path",
-    "type": "java.lang.String",
-    "description": "A description for 'image.user.path'"
+    "description": "A description for 'image.path.todo'"
   }
 ]}
