--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ spring.jpa.properties.hibernate.format_sql = true
 #logging.level.org.hibernate.type.descriptor.sql=true
 
 ####spring.jackson.serialization.fail-on-empty-beans=false
-####spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-file-size = 10MB
 #spring.servlet.multipart.location=""
 
 
