--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -114,8 +114,8 @@ spring.jpa.properties.hibernate.format_sql = true
 
 #spring.cache.jcache.config=classpath:ehcache.xml
 #spring.redis.lettuce.pool.max-active=10
-#spring.redis.port=6379
-#spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.host=127.0.0.1
 
 #Relying upon circular references is discouraged and they are prohibited by default.
 #Update your application to remove the dependency cycle between beans. As a last resort, it may be possible to break the cycle automatically by setting spring.main.allow-circular-references to true.
