--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,8 +91,8 @@ slack.token.location=/home/token
 slack.channel.monitor=#backend-error-message
 
 #product
-image.user.path=/home/img/user
-image.todo.path=/home/img/todo
+image.path.user=/home/img/user
+image.path.todo=/home/img/todo
 
 ###mvc
 #spring.mvc.view.prefix= /WEB-INF/views/
@@ -116,8 +116,8 @@ spring.jpa.properties.hibernate.format_sql = true
 #spring.redis.lettuce.pool.max-active=10
 spring.redis.port=6379
 spring.redis.host=127.0.0.1
-
-#Relying upon circular references is discouraged and they are prohibited by default.
-#Update your application to remove the dependency cycle between beans. As a last resort, it may be possible to break the cycle automatically by setting spring.main.allow-circular-references to true.
-#spring.main.allow-circular-references=false
+#
+##Relying upon circular references is discouraged and they are prohibited by default.
+##Update your application to remove the dependency cycle between beans. As a last resort, it may be possible to break the cycle automatically by setting spring.main.allow-circular-references to true.
+##spring.main.allow-circular-references=false
 
