--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -18,5 +18,20 @@
     "name": "image.path.todo",
     "type": "java.lang.String",
     "description": "A description for 'image.path.todo'"
+  },
+  {
+    "name": "broker.server.name",
+    "type": "java.lang.String",
+    "description": "A description for 'broker.server.name'"
+  },
+  {
+    "name": "broker.name.message",
+    "type": "java.lang.String",
+    "description": "A description for 'broker.name.message'"
+  },
+  {
+    "name": "broker.name.sub",
+    "type": "java.lang.String",
+    "description": "A description for 'broker.name.sub'"
   }
 ]}
