--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,11 +47,16 @@
 #spring.servlet.multipart.max-file-size = 10MB
 ##spring.servlet.multipart.location=""
 #
-#
-##spring.cache.jcache.config=classpath:ehcache.xml
 #spring.redis.lettuce.pool.max-active=10
 #spring.redis.port=6379
 #spring.redis.host=127.0.0.1
+#
+#### MessageBrokerConfig
+#
+#broker.server.name=/ws
+#broker.name.message=/message
+#broker.name.sub=/sub
+#broker.dest.prex=/pub
 
 #Relying upon circular references is discouraged and they are prohibited by default.
 #Update your application to remove the dependency cycle between beans. As a last resort, it may be possible to break the cycle automatically by setting spring.main.allow-circular-references to true.
@@ -114,8 +119,13 @@ spring.jpa.properties.hibernate.format_sql = true
 
 #spring.cache.jcache.config=classpath:ehcache.xml
 #spring.redis.lettuce.pool.max-active=10
-spring.redis.port=6379
-spring.redis.host=127.0.0.1
+#spring.redis.port=6379
+#spring.redis.host=127.0.0.1
+
+broker.server.name=/ws
+broker.name.message=/message
+broker.name.sub=/sub
+broker.dest.prex=/pub
 #
 ##Relying upon circular references is discouraged and they are prohibited by default.
 ##Update your application to remove the dependency cycle between beans. As a last resort, it may be possible to break the cycle automatically by setting spring.main.allow-circular-references to true.
